# symon-format

./: Cargo.toml  LICENSE  README.md
corpus/: copy.symon  copy.symon.expected
src/: lib.rs  main.rs  query.scm
tests/: cli.rs
